feat: :sparkles: user list
