# services/registry/internal/httpapi/server.go
@@ -60,7 +60,9 @@ func (s *Server) Routes() http.Handler {
 	mux.HandleFunc("POST "+v1+"/logout", s.handleLogout)
 	mux.HandleFunc("GET "+v1+"/me", s.requireAuth(s.handleMe))
 	mux.HandleFunc("GET "+v1+"/roles", s.requirePermission(user.PermUsersManage, s.handleListRoles))
+	mux.HandleFunc("GET "+v1+"/users", s.requirePermission(user.PermUsersManage, s.handleListUsers))
 	mux.HandleFunc("POST "+v1+"/users", s.requirePermission(user.PermUsersManage, s.handleCreateUser))
+	mux.HandleFunc("PATCH "+v1+"/users/{id}/roles", s.requirePermission(user.PermUsersManage, s.handleUpdateUserRoles))
 	mux.HandleFunc("POST "+v1+"/users/activate", s.handleActivateUser)
 	mux.HandleFunc("POST "+v1+"/password/change", s.requireAuth(s.handleChangePassword))
 	mux.HandleFunc("POST "+v1+"/password/reset/request", s.handleRequestPasswordReset)
